--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "check": "astro check"
+    "check": "astro check",
+    "cms:dev": "sanity dev --config sanity/sanity.config.ts",
+    "cms:build": "sanity build --config sanity/sanity.config.ts",
+    "cms:deploy": "sanity deploy --config sanity/sanity.config.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@sanity/client": "^6.15.5",
+    "@sanity/vision": "^4.21.1",
     "astro": "^5.16.5",
     "clsx": "^2.1.1",
+    "groq": "^3.32.3",
     "reading-time": "^1.5.0",
+    "sanity": "^4.21.1",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
