--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "check": "astro check",
     "cms:dev": "sanity dev --config sanity/sanity.config.ts",
     "cms:build": "sanity build --config sanity/sanity.config.ts",
-    "cms:deploy": "sanity deploy --config sanity/sanity.config.ts"
+    "cms:deploy": "sanity deploy --config sanity/sanity.config.ts",
+    "cms:seed": "node scripts/seed-sanity.js"
   },
   "dependencies": {
+    "@portabletext/react": "^3.1.0",
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
@@ -22,6 +24,8 @@
     "@sanity/vision": "^4.21.1",
     "astro": "^5.16.5",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "gray-matter": "^4.0.3",
     "groq": "^3.32.3",
     "reading-time": "^1.5.0",
     "sanity": "^4.21.1",
