preview drafts in cms

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 SANITY_PROJECT_ID=
 SANITY_DATASET=production
+# Required for preview/drafts
 SANITY_READ_TOKEN=
+# Required for seeding/import
 SANITY_WRITE_TOKEN=
