--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
       "@styles/*": ["src/styles/*"],
       "@content/*": ["src/content/*"]
     }
-  }
+  },
+  "exclude": ["sanity/**/*", "sanity"]
 }
