--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/rss": "^4.0.14",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^9.0.2",
     "@portabletext/react": "^3.1.0",
     "@sanity/client": "^6.15.5",
     "@sanity/vision": "^4.21.1",
