--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "check": "astro check",
-    "cms:dev": "sanity dev --config sanity/sanity.config.ts",
-    "cms:build": "sanity build --config sanity/sanity.config.ts",
-    "cms:deploy": "sanity deploy --config sanity/sanity.config.ts",
-    "cms:seed": "node scripts/seed-sanity.js"
+    "check": "astro check"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
@@ -21,17 +17,10 @@
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^9.0.2",
-    "@portabletext/react": "^3.1.0",
-    "@sanity/client": "^6.15.5",
-    "@sanity/vision": "^4.21.1",
     "astro": "^5.16.5",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
     "gray-matter": "^4.0.3",
-    "groq": "^3.32.3",
     "reading-time": "^1.5.0",
-    "sanity": "^4.21.1",
-    "styled-components": "^6.1.19",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
