--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
       "@content/*": ["src/content/*"]
     }
   },
-  "exclude": ["sanity/**/*", "sanity"]
+  "exclude": ["sanity/**/*", "sanity", "dist"]
 }
