build-bouncerv2 installed

--- a/.buildbouncer/config.yaml
+++ b/.buildbouncer/config.yaml
@@ -6,8 +6,8 @@ checks:
       run: npm run build
 insults:
     mode: snarky
-    file: assets/insults/default.json
+    file: .buildbouncer/assets/insults/default.json
     locale: en
 banter:
-    file: assets/banter/default.json
+    file: .buildbouncer/assets/banter/default.json
     locale: en
